<resources>
    <string name="app_name">司法服务</string>
    <string name="app_name_min">公众版</string>
    <string name="all_rights_reserved">Copyright © 2016 Lawyee. All Rights Reserved.</string>
    <string name="null_account_prompt">请输入帐号号</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="none_conected">无网络连接</string>
    <string name="incrrorectNum">请输入正确的手机号码</string>
    <string name="noMsgData">没有数据了</string>
    <string name="url_base">http://202.98.194.56:8888</string>
    <string name="url_base_pro">appinterface</string>
    <string name="url_json">$base/$pro/rest.q4w</string>
    <string name="url_imagefileurl">$base/website/attachment/readimg.q4w?oid=[oid]</string>
    <string name="url_fileurl">$base/website/attachment/download.q4w?oid=[oid]</string>
    <string name="url_uploadfileurl">$base/$pro/uploadify.q4w</string>
    <string name="url_openfire_host">202.98.194.67</string>
    <string name="url_openfire_servername">202.98.194.67</string>
    <string name="url_openfire_port">5222</string>
    <string name="url_openfire_ressource"></string>
    <string name="content_start">start_consult</string>
    <string name="content_welcome">您好！请问有什么可以帮助您？</string>
    <string name="content_finish">finish</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
    <string name="submit_report">提交报告</string>
    <string name="no_chat">暂无聊天记录</string>
    <string name="prompt_network_connect_timeout">连接超时！</string>
    <string name="prompt_network_read_timeout">读取超时！</string>
    <string name="prompt_network_url_error">url地址无效！</string>
    <string name="prompt_network_error">网络连接失败！</string>
    <string name="prompt_network_receiving_data_error">数据获取失败！</string>
    <string name="dl_title_prompt">提示</string>
    <string name="dl_title_error">出错啦</string>
    <string name="dl_msg_receiving_data">正在获取数据&#8230;&#8230;</string>
    <string name="dl_msg_update_error">获取最新版本信息失败！</string>
    <string name="dl_btn_ok">确认</string>
    <string name="dl_btn_back">返回</string>
    <string name="dl_btn_confirm">确定</string>
    <string name="dl_btn_cancel">取消</string>
    <string name="dl_btn_quit">退出</string>
    <string name="dl_btn_submit">提交</string>
    <string name="title_activity_on_line_chat">Chat</string>
    <string name="dl_titile_pleaseLogin">您需要登录后才能操作，是否现在登录？</string>
    <string name="dl_titile_pleasemodifyinfo">您需要填写必要的个人信息才能办理业务，是否现在修改？</string>
    <string name="dl_titile_please_change_Login">您好，如需办理公众业务，请登录公众账号</string>
    <string name="dl_title_finishchat">您确定结束当前聊天？</string>
    <string name="dl_title_backIsconfirm">您确定结束当前申请页</string>
    <string name="dl_title_pleasesubmit">您确定提交当前申请页</string>
    <string name="rationale_storage">此应用程序需要访问存储卡的权限。</string>
    <string name="rationale_camera">此应用程序需要打开照相机的权限。</string>
    <string name="rationale_location">此应用程序需要定位的权限.</string>
    <string name="rationale_ask_again">当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行此应用权限授权。</string>
    <string name="rationale_title_settings_dialog">权限需求</string>
    <string name="rationale_setting">设置</string>
    <string name="rationale_cancel">取消</string>
    <string name="home_title_name">贵州省公共法律服务网</string>
    <string name="legal_aid">法律援助</string>
    <string name="legal_aidInfom">法律援助资讯</string>
    <string name="notary_public">公证服务</string>
    <string name="people_mediation">人民调解</string>
    <string name="lawyer_service">律师服务</string>
    <string name="duty_lawyers">值班律师</string>
    <string name="legal_publicity">法制宣传</string>
    <string name="judicial_expertise">司法鉴定</string>
    <string name="basic_legal_service">基层法律服务</string>
    <string name="judicial_examination">司法考试</string>
    <string name="newsdetail_news_content_empty">获取到的资讯内容为空</string>
    <string name="newsdetail_news_content_geterror">无法正常获取资讯内容</string>
    <string name="screen">筛选</string>
    <string name="lawyer">律师</string>
    <string name="law_office">律所</string>
    <string name="law_office_tip">律所：</string>
    <string name="law_place_tip">地区：</string>
    <string name="law_speciality_tip">专长：</string>
    <string name="law_major_tip">专业：</string>
    <string name="law_office_phone">电话：</string>
    <string name="sure">确定</string>
    <string name="all">全部</string>
    <string name="please_input_lawyer">请输入律师姓名</string>
    <string name="please_input_law_firm">请输入律所名称</string>
    <string name="area">所在地区</string>
    <string name="area1">地区：</string>
    <string name="service_content">服务内容</string>
    <string name="professional_field">专业领域</string>
    <string name="professional_field2">专&#160;业&#160;领&#160;域</string>
    <string name="entire_period_of_actual_operation">从业年限</string>
    <string name="isOnline">是否在线</string>
    <string name="clear_choose">清空选择</string>
    <string name="find_lawyer">找律师</string>
    <string name="find_law_firm">找律所</string>
    <string name="get_error_noeffectdata">获取失败:服务端无效返回数据</string>
    <string name="find_online_entrust">找律师-在线委托</string>
    <string name="online_entrust">在线委托</string>
    <string name="consult">咨询</string>
    <string name="law_firm_info">律&#160;所&#160;信&#160;息</string>
    <string name="law_firm_info2">律所信息</string>
    <string name="law_firm_intro">律&#160;所&#160;简&#160;介</string>
    <string name="law_firm_contact">联&#160;系&#160;信&#160;息</string>
    <string name="law_firm_teach">所&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;训：</string>
    <string name="law_firm_practice_certificate_number">执业许可证号：</string>
    <string name="law_firm_administrative">主管机关：</string>
    <string name="organizational_form">组织形式 ：</string>
    <string name="founding_time">成立时间：</string>
    <string name="principal">负责人：</string>
    <string name="lawyer_num">律师人数：</string>
    <string name="affiliating_area">所属地区：</string>
    <string name="professional_field1">专业领域：</string>
    <string name="lawyer_info">律&#160;师&#160;信&#160;息</string>
    <string name="lawyer_info2">律师信息</string>
    <string name="lawyer_account">律&#160;师&#160;自&#160;述</string>
    <string name="service_project">服&#160;务&#160;项&#160;目</string>
    <string name="customer_evaluation">客&#160;户&#160;评&#160;价</string>
    <string name="contact_me">请&#160;联&#160;系&#160;我</string>
    <string name="pack_up">收起</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="age">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄：</string>
    <string name="politics_status">政治面貌：</string>
    <string name="lawyer_title">律师职称：</string>
    <string name="practice_type">执业类型：</string>
    <string name="practice_organization">执业机构：</string>
    <string name="practice_status">执业状态：</string>
    <string name="practice_certificate_number">执业证号：</string>
    <string name="practice_water_certificate_number">执业流水证号：</string>
    <string name="first_practice">首次执业时间：</string>
    <string name="judicial_administrative">主管司法行政机关：</string>
    <string name="integrity_info">诚信信息（近3年）</string>
    <string name="administrative_penalty">行政处罚：</string>
    <string name="Industry_dispose">行业处分：</string>
    <string name="annual_assessment">年度考核：</string>
    <string name="reward_information">奖励信息：</string>
    <string name="civil_commercial_agent">民商代理：</string>
    <string name="criminal_defense">刑事辩护：</string>
    <string name="entrust">我要委托</string>
    <string name="cartographic_information">地图信息：</string>
    <string name="law_irms_address">律所地址：</string>
    <string name="law_service_calls">律所服务电话：</string>
    <string name="law_serves_mailbox">律所服务邮箱：</string>
    <string name="check_my_lawyer">查看本所律师</string>
    <string name="defaut">默认</string>
    <string name="experience">经验</string>
    <string name="entrust_tip1">&#160;&#160;&#160;&#160;&#160;请您描述您的基本案件情况和服务需求，以便律师了解情况。贵州公共法律服务网也将对您的信息进行保密。</string>
    <string name="entrust_tip2">您的联系电话</string>
    <string name="entrust_tip3">我们将向</string>
    <string name="entrust_tip4">律师及所在律师事务所提供你的电话，请注意接听来自律师本人或律所的电话，进行联系和具体业务沟通！</string>
    <string name="entrust_tip7"> 如留下您的服务电话，贵州公共法律服务网将向</string>
    <string name="entrust_tip8">法律服务工作者及其所在法律服务所提供您的联系电话
        请注意接听来自工作者或服务所的电话，进行联系和具体业务沟通！</string>
    <string name="entrust_tip5">尊敬的</string>
    <string name="entrust_tip6">：</string>
    <string name="to">至</string>
    <string name="clothing">授以</string>
    <string name="year">年度</string>
    <string name="my_localtion">我的位置</string>
    <string name="finish">结束</string>
    <string name="login">登录</string>
    <string name="login2">登&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="affirm">确&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="register">注册</string>
    <string name="second">秒</string>
    <string name="retry">重发</string>
    <string name="get_ing">获取数据中...</string>
    <string name="pwd_input_err">两次密码输入不一致，请重新输入！</string>
    <string name="please_agree">请同意用户注册协议</string>
    <string name="register_success">注册成功</string>
    <string name="submit_success">提交成功</string>
    <string name="find_pwd_ing">找回密码中...</string>
    <string name="find_pwd_success">找回密码成功</string>
    <string name="register2">注&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="register_ing">注册中...</string>
    <string name="submit_ing">提交中...</string>
    <string name="please_input_phone">请输入您的手机号/账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_content_errorhint">请输入有效的内容</string>
    <string name="please_input_phone_errorhint">请输入有效的手机号</string>
    <string name="please_input_vercode_errorhint">请输入有效的验证码</string>
    <string name="please_input_pwd_errorhint">请输入有效的密码，密码长度不小于6位</string>
    <string name="please_choose_role">请选择对应的角色</string>
    <string name="login_error_noeffectdata">登录失败:服务端无效返回数据</string>
    <string name="login_sucess">登录成功</string>
    <string name="please_choose_type">请选择您的身份</string>
    <string name="please_choose_business">请选择业务类型</string>
    <string name="auto_login_sucess">自动登录成功</string>
    <string name="please_input_pwd_again">请再次输入密码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="read_sure">您已阅读并同意</string>
    <string name="apply_write_information">填写申请人信息</string>
    <string name="org_province">省</string>
    <string name="apply_city">市州</string>
    <string name="org_area">区县</string>
    <string name="apply_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="apply_sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="apply_document_type">证件类型</string>
    <string name="apply_Nation">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族</string>
    <string name="apply_phone">联系电话</string>
    <string name="apply_domicile">户籍所在地</string>
    <string name="apply_residence">住所地\n(常住地)</string>
    <string name="apply_work_unit">工作单位</string>
    <string name="apply_summary">案情及申请理由概述</string>
    <string name="apply_mal_id_card">请选择证件类型</string>
    <string name="jaemd_select_adjust_type">选择调解类型</string>
    <string name="jamed_commonly_apply">一般调解申请</string>
    <string name="jamed_profession_apply">专业调解申请</string>
    <string name="jamed_mediate_org">请选择调解机构：</string>
    <string name="jamed_select">点击选择（注：选中后自动返回至本页）</string>
    <string name="jamed_warn_content">该调解委员会未开通网上申请</string>
    <string name="jamed_warn_tishi">是否同意媒体参与调解（“人民调解大篷车”）</string>
    <string name="jamed_warn_infom">提示：新闻中心提供说明性文字</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="apply_jaaid_data">出生日期</string>
    <string name="apply_id_type_number">证件号码</string>
</resources>