<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:background="@color/activity_content_bg"
    >

    <LinearLayout style="@style/TitleBar">

        <ImageView
            style="@style/TitleBarAction"
            android:onClick="onHomeClick"
            android:src="@drawable/btn_return_normal"/>

        <TextView
            android:id="@+id/textView6"
            style="@style/TitleBarText"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/tv_select"
            style="@style/TitleBarTextAction"
            android:clickable="true"
            android:onClick="onToolbarClick"
            android:text="@string/register"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login"
        ></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="87"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="363"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/selector_btn_phone"
                android:drawablePadding="5dp"
                android:hint="@string/please_input_phone"
                android:singleLine="true"
                android:textColor="@color/lawyer_list_text_tip2"
                android:textColorHint="@color/et_hint_bg"
                />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/selector_btn_pwd"
                android:drawablePadding="5dp"
                android:hint="@string/please_input_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/lawyer_list_text_tip2"
                android:textColorHint="@color/et_hint_bg"
                />

            <TextView
                android:id="@+id/tv_choose_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/selector_btn_role"
                android:drawablePadding="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/please_choose_type"
                android:singleLine="true"
                android:textColor="@color/lawyer_list_text_tip2"
                android:textColorHint="@color/et_hint_bg"
                android:textSize="@dimen/text_size_medium"
                />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/login_under"
                ></View>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_law_screen_text"
                android:gravity="center"
                android:text="@string/login2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="16dp"
                >

                <CheckBox
                    android:id="@+id/cb_remember_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/selector_btn_check"
                    android:drawablePadding="3dp"
                    android:text="@string/remember_password"
                    android:textColor="@color/home_list_text_tip"
                    android:textSize="@dimen/text_size_mediummin"
                    />

                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/home_list_text_tip"
                    android:textSize="@dimen/text_size_mediummin"/>

            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="87"/>

    </LinearLayout>

</LinearLayout>

